kubernetes/namespaces/monitoring/uptime-kuma/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
spec:
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - image: louislam/uptime-kuma:1
          imagePullPolicy: IfNotPresent
          name: uptime-kuma
          ports:
            - containerPort: 3001
              name: http
          volumeMounts:
            - name: uptime-kuma-storage
              mountPath: /var/lib/uptime-kuma
      volumes:
        - name: uptime-kuma-storage
          persistentVolumeClaim:
            claimName: uptime-kuma-storage
