kubernetes/namespaces/monitoring/uptime-kuma/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  annotations:
    prometheus.io/probe: 'true'
spec:
  selector:
    app: uptime-kuma
  type: NodePort
  ports:
    - port: 80
      targetPort: http
